DECC_yamls/mongo_svc-rs2.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-rs2
  labels:
    name: mongo-rs2
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  selector:
    app: mongo-rs2
