DECC_yamls/mongo_svc-rs3.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-rs3
  labels:
    name: mongo-rs3
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  selector:
    app: mongo-rs3
