DECC_yamls/rabbitmq_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    name: rabbitmq
spec:
  type: NodePort
  ports:
    - name: queue-port
      port: 5672
      targetPort: 5672
    - name: mgt-port
      port: 15672
      targetPort: 15672
  selector:
    app: rabbitmq
