DECC_yamls/test-ubuntu-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoheaders-test-ubuntu
  labels:
    name: echoheaders-test-ubuntu
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: echoheaders-test-ubuntu
