DECC_yamls/topo-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: topo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
  resourceVersion: "1080"
spec:
  rules:
  - host: tools-svc.10.192.234.22.xip.io
    http:
      paths:
      - path: /foo
        backend:
          serviceName: hello-w1
          servicePort: 80
      - path: /topo
        backend:
          serviceName: topo-restservice
          servicePort: 5000
      - path: /runtest-topo
        backend:
          serviceName: topo-test-launch
          servicePort: 5000
      - path: /result
        backend:
          serviceName: topo-result-display
          servicePort: 5000
      - path: /static
        backend:
          serviceName: topo-result-display
          servicePort: 5000
      - path: /svc-demo
        backend:
          serviceName: svc-demo
          servicePort: 5000
status:
    loadBalancer:
      ingress:
      - ip: 10.192.234.22
